--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,8 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script src="%sveltekit.assets%/flyonui.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+		<script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
 	</body>
 </html>
