--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover"
+				class="overflow-y-scroll"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 		<script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
